--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server-bot.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "telegraf": "^4.15.3"
+    "telegraf": "^4.16.2"
   }
 }
