--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server-bot.js"
   },
+  "engines": {
+    "node": "20.11.0",
+    "npm": "10.2.4"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
