--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ coverage
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+.idea
+vcs.xml
+
 # Bower dependency directory (https://bower.io/)
 bower_components
 
