--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server-bot.js"
   },
   "engines": {
@@ -17,5 +17,8 @@
     "axios": "^1.6.8",
     "openai": "^4.33.0",
     "telegraf": "^4.16.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
